--- a/resources/CSS/_mixins.scss
+++ b/resources/CSS/_mixins.scss
@@ -37,7 +37,7 @@
     border-radius: 5px;
     border: none;
     background-color: white;
-    margin: 0 10px
+    margin: 10px
 }
 
 @mixin submit {
