--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -85,6 +85,9 @@
   #categoriesIndex .shoeCategories {
     flex-direction: column;
   }
+  #categoriesIndex .shoeCategories .boots, #categoriesIndex .shoeCategories .ankleBoots {
+    margin: 20px 0 !important;
+  }
   /********** USERS PAGE **********/
   .mainBloc form {
     display: flex;
@@ -344,7 +347,7 @@ header .home-title {
   background-repeat: no-repeat;
   box-shadow: rgba(74, 48, 104, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
-  margin: 20px;
+  margin: 20px 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -359,7 +362,7 @@ header .home-title {
   background-repeat: no-repeat;
   box-shadow: rgba(74, 48, 104, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
-  margin: 20px;
+  margin: 20px 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
