--- a/resources/CSS/style.scss
+++ b/resources/CSS/style.scss
@@ -93,7 +93,7 @@ header {
             background-repeat: no-repeat;
             box-shadow: rgba(74, 48, 104, 0.2) 0px 7px 29px 0px;
             border-radius: 10px;
-            margin: 20px;
+            margin: 20px 60px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -109,7 +109,7 @@ header {
             background-repeat: no-repeat;
             box-shadow: rgba(74, 48, 104, 0.2) 0px 7px 29px 0px;
             border-radius: 10px;
-            margin: 20px;
+            margin: 20px 60px;
             display: flex;
             flex-direction: column;
             align-items: center;
