--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -261,6 +261,14 @@ h3 {
   margin: 20px;
 }
 
+h4 {
+  font-family: "Over the Rainbow", cursive;
+  font-weight: bold;
+  text-align: center;
+  color: #4F376D;
+  margin: 20px;
+}
+
 p {
   font-family: "Montserrat", sans-serif;
   color: black;
