--- a/resources/CSS/style.scss
+++ b/resources/CSS/style.scss
@@ -48,6 +48,16 @@ p {
     text-decoration: none;
 }
 
+.submitPanier {
+    @include submitPanier;
+}
+
+.submitPanier:hover {
+    background-color: $darkpurple;
+    color: white;
+    text-decoration: none;
+}
+
 /***** HEADER *****/
 header {
     .navbar-expand-lg {
@@ -498,6 +508,56 @@ li {
         label {
             font-size: 20px;
             color: white;
+        }
+    }
+}
+
+/********** SHOPPING BASKET PAGE **********/
+.bodyBasket {
+    height: 100vh;
+    background-image: linear-gradient(rgba(32, 19, 47, 0.7), rgba(87, 37, 87, 0)), url(../images/wallpaper.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+
+    #basket {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    h2 {
+        color: white;
+        padding-top: 40px;
+
+        h2::after {
+            background-color: white;
+        }
+    }
+
+    form {
+
+        table.basketTable {
+            table-layout: auto;
+            font-family: 'Montserrat', sans-serif;
+            margin: 40px 0;
+
+            td {
+                border: 1px solid white;
+                height: 60px;
+                text-align: center;
+                padding: 5px;
+            }
+
+            th {
+                border: 1px solid white;
+                height: 40px;
+                text-align: center;
+                padding: 5px;
+                text-transform: uppercase;
+                background-color: rgba(220, 184, 244, 0.3);
+            }
         }
     }
 }
